--- a/app/views/instructores/_form.html.erb
+++ b/app/views/instructores/_form.html.erb
@@ -1,15 +1,6 @@
 <%= form_for(@instructor) do |f| %>
-  <% if @instructor.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@instructor.errors.count, "error") %> prohibited this instructor from being saved:</h2>
+    <%= render "shared/error_messages", :target => @instructor %>
 
-      <ul>
-      <% @instructor.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
 
   <div class="field">
     <%= f.label :cedula %><br />
