--- a/app/views/avances/_form.html.erb
+++ b/app/views/avances/_form.html.erb
@@ -1,15 +1,5 @@
 <%= form_for(@avance) do |f| %>
-  <% if @avance.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@avance.errors.count, "error") %> prohibited this avance from being saved:</h2>
-
-      <ul>
-      <% @avance.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
+  <%= render "shared/error_messages", :target => @avance %>
 
   <div class="field">
     <%= f.label :final_id %><br />
