--- a/app/views/departamentos/_form.html.erb
+++ b/app/views/departamentos/_form.html.erb
@@ -1,15 +1,5 @@
 <%= form_for(@departamento) do |f| %>
-  <% if @departamento.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@departamento.errors.count, "error") %> prohibited this departamento from being saved:</h2>
-
-      <ul>
-      <% @departamento.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
+    <%= render "shared/error_messages", :target => @departamento %>
 
   <div class="field">
     <%= f.label :name %><br />
