--- a/app/views/fases/_form.html.erb
+++ b/app/views/fases/_form.html.erb
@@ -1,15 +1,6 @@
 <%= form_for(@fase) do |f| %>
-  <% if @fase.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@fase.errors.count, "error") %> prohibited this fase from being saved:</h2>
+   <%= render "shared/error_messages", :target => @fase %>
 
-      <ul>
-      <% @fase.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
 
   <div class="field">
     <%= f.label :name %><br />
