--- a/app/views/finales/_form.html.erb
+++ b/app/views/finales/_form.html.erb
@@ -1,15 +1,6 @@
 <%= form_for(@final) do |f| %>
-  <% if @final.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@final.errors.count, "error") %> prohibited this final from being saved:</h2>
+    <%= render "shared/error_messages", :target => @final %>
 
-      <ul>
-      <% @final.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
 
   <div class="field">
     <%= f.label :totales %><br />
