--- a/app/views/preguntas/_form.html.erb
+++ b/app/views/preguntas/_form.html.erb
@@ -1,15 +1,5 @@
 <%= form_for(@pregunta) do |f| %>
-  <% if @pregunta.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@pregunta.errors.count, "error") %> prohibited this pregunta from being saved:</h2>
-
-      <ul>
-      <% @pregunta.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
+    <%= render "shared/error_messages", :target => @apregunta %>
 
   <div class="field">
     <%= f.label :pregunta %><br />
