--- a/app/views/programas_responsables/_form.html.erb
+++ b/app/views/programas_responsables/_form.html.erb
@@ -1,15 +1,5 @@
 <%= form_for(@programas_responsable) do |f| %>
-  <% if @programas_responsable.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@programas_responsable.errors.count, "error") %> prohibited this programas_responsable from being saved:</h2>
-
-      <ul>
-      <% @programas_responsable.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
+    <%= render "shared/error_messages", :target => @programas_responsable %>
 
   <div class="field">
     <%= f.label :programa_id %><br />
