--- a/app/views/respuestas/_form.html.erb
+++ b/app/views/respuestas/_form.html.erb
@@ -1,15 +1,5 @@
 <%= form_for(@respuesta) do |f| %>
-  <% if @respuesta.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@respuesta.errors.count, "error") %> prohibited this respuesta from being saved:</h2>
-
-      <ul>
-      <% @respuesta.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
+    <%= render "shared/error_messages", :target => @respuesta %>
 
   <div class="field">
     <%= f.label :pregunta_id %><br />
