--- a/app/views/resultados/_form.html.erb
+++ b/app/views/resultados/_form.html.erb
@@ -1,15 +1,5 @@
 <%= form_for(@resultado) do |f| %>
-  <% if @resultado.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@resultado.errors.count, "error") %> prohibited this resultado from being saved:</h2>
-
-      <ul>
-      <% @resultado.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
+  <%= render "shared/error_messages", :target => @resultado %>
 
   <div class="field">
     <%= f.label :equipo_id %><br />
