--- a/app/views/preguntas/_form.html.erb
+++ b/app/views/preguntas/_form.html.erb
@@ -1,5 +1,5 @@
 <%= form_for(@pregunta) do |f| %>
-    <%= render "shared/error_messages", :target => @apregunta %>
+    <%= render "shared/error_messages", :target => @pregunta %>
 
   <div class="field">
     <%= f.label :pregunta %><br />
