--- a/app/views/aprendices/index.html.erb
+++ b/app/views/aprendices/index.html.erb
@@ -26,7 +26,7 @@
     <td><%= aprendiz.email %></td>
     <td><%= aprendiz.telefono %></td>
     <td><%= aprendiz.genero %></td>
-    <td><%= aprendiz.municipio_id %></td>
+    <td><%= aprendiz.municipio.id %></td>
     <td><%= aprendiz.equipo_id %></td>
     <td><%= aprendiz.programa_id %></td>
     <td><%= link_to 'Show', aprendiz %></td>
