--- a/app/views/aprendices/show.html.erb
+++ b/app/views/aprendices/show.html.erb
@@ -32,22 +32,22 @@
 
 <p>
   <b>Genero:</b>
-  <%= @aprendiz.genero %>
+  <%= @aprendiz.genero1 %>
 </p>
 
 <p>
   <b>Municipio:</b>
-  <%= @aprendiz.municipio_id %>
+  <%= @aprendiz.municipio.name %>
 </p>
 
 <p>
   <b>Equipo:</b>
-  <%= @aprendiz.equipo_id %>
+  <%= @aprendiz.equipo.name %>
 </p>
 
 <p>
   <b>Programa:</b>
-  <%= @aprendiz.programa_id %>
+  <%= @aprendiz.programa.name %>
 </p>
 
 
