--- a/app/views/pruebas/index.html.erb
+++ b/app/views/pruebas/index.html.erb
@@ -15,8 +15,8 @@
   <tr>
     <td><%= prueba.name %></td>
     <td><%= prueba.fch_limite %></td>
-    <td><%= prueba.fase_id %></td>
-    <td><%= prueba.aprendiz_id %></td>
+    <td><%= prueba.fase.name %></td>
+    <td><%= prueba.aprendiz.nombre %></td>
     <td><%= link_to 'Show', prueba %></td>
     <td><%= link_to 'Edit', edit_prueba_path(prueba) %></td>
     <td><%= link_to 'Destroy', prueba, :confirm => 'Are you sure?', :method => :delete %></td>
