--- a/app/views/pruebas/show.html.erb
+++ b/app/views/pruebas/show.html.erb
@@ -12,12 +12,12 @@
 
 <p>
   <b>Fase:</b>
-  <%= @prueba.fase_id %>
+  <%= @prueba.fase.name %>
 </p>
 
 <p>
   <b>Aprendiz:</b>
-  <%= @prueba.aprendiz_id %>
+  <%= @prueba.aprendiz.nombre %>
 </p>
 
 
