--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,43 @@
-<!DOCTYPE html>
-<html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
+	"http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
-  <title>AKM</title>
+  <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
+  <title>A K M</title>
   <%= stylesheet_link_tag :all %>
   <%= javascript_include_tag :defaults %>
   <%= csrf_meta_tag %>
+  
 </head>
+
+  <% yield :HEAD %>
+
 <body>
 
-<%= yield %>
+  <div id="content" >
+    <img src="/images/banner.png" width="1400" height="164" alt="A K M" id="banere round" />
+  </div>
+
+  <div id="menuhoriz">
+    <ul >
+      <li><%= link_to "Equipos", equipos_path %></li>
+      <li><%= link_to "Programas", programas_path %></li>
+      <li><%= link_to "Fases", fases_path %></li>
+      <li><%= link_to "pruebas", pruebas_path %></li>
+      <li><%= link_to "preguntas", preguntas_path %></li>
+      <li><%= link_to "Respuestas", respuestas_path %></li>
+     </ul>
+   </div >
+
+  <div  id="yield">
+    <%= yield  %>
+  </div>
+
+   <br />
+   
+  <div id="footer">
+    Powered By Fido - ADSI 2010, Itagüi;Antioquia
+  </div>
 
 </body>
 </html>
